--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,14 @@ This changelog is viewable on the web at https://docs.funkwhale.audio/changelog.
 
 .. towncrier
 
+1.3.0-rc5 (2023-03-26)
+----------------------
+
+Updates since 1.3.0-rc4
+
+- Bump cryptography to 38.0.3-rc1 to match package provided by alpine
+- Fix numerous frontend performance and stability issues
+
 1.3.0-rc4 (2023-03-24)
 ----------------------
 
