--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,74 @@ This changelog is viewable on the web at https://docs.funkwhale.audio/changelog.
 
 .. towncrier
 
+1.3.2 (2023-09-01)
+------------------
+
+Upgrade instructions are available at
+https://docs.funkwhale.audio/administrator/upgrade/index.html
+
+Enhancements:
+
+- Enable sourcemaps for production builds
+- Use logger composable instead of window.console
+
+
+Bugfixes:
+
+- Clear shuffled id list on queue clear (#2192)
+- Fetch the nodeinfo endpoint from .well-known/nodeinfo when checking instance availability
+- Fix instance checking its own availability (#2199)
+- Fix multiarch docker builds #2211
+- Fix ordering when querystring contains `+` prefix
+  Resolve multiple updates to ordering fields
+- Fix password reset via email
+- Make podcast episode pagination reactive (#2205)
+- Render HTML in podcast short description (#2206)
+- Resolve race condition regarding axios when initializing the frontend
+  Prevent sending same language setting to backend multiple times
+
+
+Documentation:
+
+- Fixed incorrect upgrade instructions link in docs.
+
+Contributors to our Issues:
+
+- Ciarán Ainsworth
+- Georg Krause
+- Kasper Seweryn
+- Kay Borowski
+- Marcos Peña
+- Mathieu Jourdan
+- Virgile Robles
+- codl
+- jooola
+- petitminion
+- tinglycraniumplacidly
+- unkn0wwn52
+
+Contributors to our Merge Requests:
+
+- Ciarán Ainsworth
+- Georg Krause
+- JuniorJPDJ
+- Kasper Seweryn
+- Marcos Peña
+- Virgile Robles
+- codl
+- jooola
+- petitminion
+
+Committers:
+
+- Ciarán Ainsworth
+- codl
+- Georg Krause
+- jo
+- Kasper Seweryn
+- petitminion
+
+
 1.3.1 (2023-06-27)
 ------------------
 
