--- a/CHANGELOG
+++ b/CHANGELOG
@@ -10,6 +10,31 @@ This changelog is viewable on the web at https://docs.funkwhale.audio/changelog.
 
 .. towncrier
 
+1.3.4 (2023-11-16)
+------------------
+
+Upgrade instructions are available at
+https://docs.funkwhale.audio/administrator/upgrade/index.html
+
+Bugfixes:
+
+- Remove dangling dependency howler
+
+
+Documentation:
+
+- Fix a redirect loop on documentation for moderators
+
+Contributors to our Merge Requests:
+
+- Georg Krause
+- Thomas
+
+Committers:
+
+- Georg Krause
+
+
 1.3.3 (2023-09-07)
 ------------------
 
